# state-sync

./: .gitignore  README.md  app.py  pyproject.toml  test_modules.py
modules/: equation_of_state.py  equation_parser.py  factory.py  find_intersection.py  loader.py
