[project]
name = "state-sync"
version = "0.1.0"
description = ""
authors = [
    {name = "oliveski",email = "oliveski@pm.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy (>=1.18.0,<2.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
